force-app/main/default/objects/Worksheet__c/fields/From11__c.field-meta.xml
<CustomField>
    <fullName>From11__c</fullName>
    <description>PacPoint: 00011810
Adding additional fields for Worksheet A</description>
    <label>From</label>
    <length>80</length>
    <type>Text</type>
</CustomField>