force-app/main/default/objects/Worksheet__c/fields/Full_Days2__c.field-meta.xml
<CustomField>
    <fullName>Full_Days2__c</fullName>
    <label>Full Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>