force-app/main/default/objects/Worksheet__c/fields/FullDays__c.field-meta.xml
<CustomField>
    <fullName>FullDays__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Full Days</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>