force-app/main/default/objects/Worksheet__c/fields/fxWorksheetCQuote1__c.field-meta.xml
<CustomField>
    <fullName>fxWorksheetCQuote1__c</fullName>
    <formula>IF(
ISPICKVAL ( SelectedQuoteWorksheetC__c, &quot;Quote 1&quot;),&quot;x&quot;,&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worksheet C - Quote 1</label>
    <type>Text</type>
</CustomField>