force-app/main/default/objects/Worksheet__c/fields/fxWorksheetCQuote2__c.field-meta.xml
<CustomField>
    <fullName>fxWorksheetCQuote2__c</fullName>
    <formula>IF(
ISPICKVAL (SelectedQuoteWorksheetC__c, &quot;Quote 2&quot;),&quot;x&quot;,&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worksheet C - Quote 2</label>
    <type>Text</type>
</CustomField>