force-app/main/default/objects/Worksheet__c/fields/fxWorksheetCQuote3__c.field-meta.xml
<CustomField>
    <fullName>fxWorksheetCQuote3__c</fullName>
    <formula>IF(
ISPICKVAL (SelectedQuoteWorksheetC__c, &quot;Quote 3&quot;),&quot;x&quot;,&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worksheet C - Quote 3</label>
    <type>Text</type>
</CustomField>