force-app/main/default/objects/Worksheet__c/fields/Grand_Total_CONUS__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_CONUS__c</fullName>
    <formula>Total_A__c +  Total_B_CONUS__c  -  Total_C_CONUS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>