force-app/main/default/objects/Worksheet__c/fields/Grand_TotalOCONUS__c.field-meta.xml
<CustomField>
    <fullName>Grand_TotalOCONUS__c</fullName>
    <formula>IF(
    Total_A__c + Total_BWorksheetBOCONUS__c - Total_C__c + Total_D_OCONUS__c &lt; 0,
    0,
    Total_A__c + Total_BWorksheetBOCONUS__c - Total_C__c + Total_D_OCONUS__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>