force-app/main/default/objects/Worksheet__c/fields/GrandTotal__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal__c</fullName>
    <description>PacPoint-AC121219 - Created for DCCA Travel Approval phase 1</description>
    <formula>TotalA__c +  TotalB__c +  TotalC__c +  TotalD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>