force-app/main/default/objects/Worksheet__c/fields/HHMMEstimatedDepartureTime10__c.field-meta.xml
<CustomField>
    <fullName>HHMMEstimatedDepartureTime10__c</fullName>
    <description>This field was created so the time format could be displayed as HH:MM so it will be displayed properly when a document is created in DocGen. PacPoint: 00011684</description>
    <formula>IF(
ISBLANK(EstimatedDepartureTime10__c),
&quot;&quot;,
IF(
MOD(HOUR(EstimatedDepartureTime10__c),12)=0,
&quot;12&quot;,
TEXT(MOD(HOUR(EstimatedDepartureTime10__c),12))
) &amp;
&quot;:&quot; &amp;
IF(
MINUTE(EstimatedDepartureTime10__c) &lt; 10,
&quot;0&quot; &amp; TEXT(MINUTE(EstimatedDepartureTime10__c)),
TEXT(MINUTE(EstimatedDepartureTime10__c))
) &amp;
IF(
HOUR(EstimatedDepartureTime10__c) &lt; 12,
&quot; AM&quot;,
&quot; PM&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Departure Time</label>
    <type>Text</type>
</CustomField>