force-app/main/default/objects/Worksheet__c/fields/HotelRate__c.field-meta.xml
<CustomField>
    <fullName>HotelRate__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>Per day including taxes &amp; fees</inlineHelpText>
    <label>Hotel Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>