force-app/main/default/objects/Worksheet__c/fields/Incidental_Expenses_Daily_Rate__c.field-meta.xml
<CustomField>
    <fullName>Incidental_Expenses_Daily_Rate__c</fullName>
    <inlineHelpText>Enter Incidental Expenses rate from GSA website.</inlineHelpText>
    <label>Incidental Expenses Daily Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>