force-app/main/default/objects/Worksheet__c/fields/Incidental_Expenses_Days__c.field-meta.xml
<CustomField>
    <fullName>Incidental_Expenses_Days__c</fullName>
    <inlineHelpText>Enter # of full days of free lodging.</inlineHelpText>
    <label>Incidental Expenses Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>