force-app/main/default/objects/Worksheet__c/fields/Intra_state_Checkbox_NEW__c.field-meta.xml
<CustomField>
    <fullName>Intra_state_Checkbox_NEW__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Travel_Approval__r.TravelType__c, &quot;Intra-State Overnight Travel&quot;),
        ISPICKVAL(Travel_Approval__r.TravelType__c, &quot;Intra-State Same Day&quot;)
    ),
    &quot;X&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intra-state Checkbox</label>
    <type>Text</type>
</CustomField>