force-app/main/default/objects/Worksheet__c/fields/Intra_State_Overnight_Checkbox_4_DocGen__c.field-meta.xml
<CustomField>
    <fullName>Intra_State_Overnight_Checkbox_4_DocGen__c</fullName>
    <description>PacPoint: 00011690 - Created for Spring CM doc generation because client needs an &quot;x&quot; as a value instead of True/False.</description>
    <formula>IF(IntraStateOvernightCheckbox__c = TRUE, &quot;x&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intra-State Overnight Checkbox 4 DocGen</label>
    <type>Text</type>
</CustomField>