force-app/main/default/objects/Worksheet__c/fields/IntraStateCheckbox__c.field-meta.xml
<CustomField>
    <fullName>IntraStateCheckbox__c</fullName>
    <description>PacPoint: JF - Case #8012 - DCCA Travel Application - Create Worksheet C Docusign Template</description>
    <formula>ISPICKVAL(TravelType__c, &quot;Intra-State&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intra-State Checkbox</label>
    <type>Checkbox</type>
</CustomField>