force-app/main/default/objects/Worksheet__c/fields/IntraStateOvernightCheckbox__c.field-meta.xml
<CustomField>
    <fullName>IntraStateOvernightCheckbox__c</fullName>
    <description>PacPoint: JF - Case #8011 - DCCA Travel Application - Create Worksheet C Docusign Template</description>
    <formula>OR(
    ISPICKVAL(TravelType__c, &quot;Intra-State (Overnight)&quot;),
    ISPICKVAL(Travel_Approval__r.TravelType__c, &quot;Intra-state Overnight Travel&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intra-State Overnight Checkbox</label>
    <type>Checkbox</type>
</CustomField>