force-app/main/default/objects/Worksheet__c/fields/IntraStateSameDayCheckbox__c.field-meta.xml
<CustomField>
    <fullName>IntraStateSameDayCheckbox__c</fullName>
    <description>PacPoint: JF - Case #8011 - DCCA Travel Application - Create Worksheet C Docusign Template</description>
    <formula>OR(
    ISPICKVAL(TravelType__c, &quot;Intra-State (Same Day)&quot;),
    ISPICKVAL(Travel_Approval__r.TravelType__c, &quot;Intra-State Same Day&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intra-State Same Day Checkbox</label>
    <type>Checkbox</type>
</CustomField>