force-app/main/default/objects/Worksheet__c/fields/IntraStateTravelTypeWorksheetC__c.field-meta.xml
<CustomField>
    <fullName>IntraStateTravelTypeWorksheetC__c</fullName>
    <description>PacPoint-AC021221 - Created for Travel Approval - Creating this field for worksheet C to display on the &quot;Intra-State&quot; field</description>
    <formula>IF(ISPICKVAL(TravelType__c, &quot;Intra-State&quot;),&quot;x&quot;,&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intra - State Travel Type Worksheet C</label>
    <type>Text</type>
</CustomField>