force-app/main/default/objects/Worksheet__c/fields/Is_Conference_Hotel_True__c.field-meta.xml
<CustomField>
    <fullName>Is_Conference_Hotel_True__c</fullName>
    <description>Created so the checkbox on the SpringCM generated document for worksheet C can get populated.</description>
    <formula>IF(ConferenceHotel__c = True, &quot;x&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Conference Hotel True?</label>
    <type>Text</type>
</CustomField>