force-app/main/default/objects/Worksheet__c/fields/IsSelectedQuoteItinerary1__c.field-meta.xml
<CustomField>
    <fullName>IsSelectedQuoteItinerary1__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(SelectedQuote__c, &quot;Quote 1&quot;),
        ISPICKVAL(SelectedQuote__c, &quot;Itinerary 1&quot;)
    ),
    &quot;X&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Selected Quote Itinerary 1</label>
    <type>Text</type>
</CustomField>