force-app/main/default/objects/Worksheet__c/fields/IsSelectedQuoteItinerary2__c.field-meta.xml
<CustomField>
    <fullName>IsSelectedQuoteItinerary2__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(SelectedQuote__c, &quot;Quote 2&quot;),
        ISPICKVAL(SelectedQuote__c, &quot;Itinerary 2&quot;)
    ),
    &quot;X&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Selected Quote Itinerary 2</label>
    <type>Text</type>
</CustomField>