force-app/main/default/objects/Worksheet__c/fields/IsSelectedQuoteItinerary3__c.field-meta.xml
<CustomField>
    <fullName>IsSelectedQuoteItinerary3__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(SelectedQuote__c, &quot;Quote 3&quot;),
        ISPICKVAL(SelectedQuote__c, &quot;Itinerary 3&quot;)
    ),
    &quot;X&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Selected Quote Itinerary 3</label>
    <type>Text</type>
</CustomField>