force-app/main/default/objects/Worksheet__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Justification</label>
    <length>741</length>
    <type>LongTextArea</type>
</CustomField>