force-app/main/default/objects/Worksheet__c/fields/Local_Incidental_Rate__c.field-meta.xml
<CustomField>
    <fullName>Local_Incidental_Rate__c</fullName>
    <label>Local Incidental Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>