force-app/main/default/objects/Worksheet__c/fields/Locality_City__c.field-meta.xml
<CustomField>
    <fullName>Locality_City__c</fullName>
    <label>Locality / City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>