force-app/main/default/objects/Worksheet__c/fields/Lunch_Rate2__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Rate2__c</fullName>
    <inlineHelpText>Lunch $ rate from GSA.gov</inlineHelpText>
    <label>Lunch Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>