force-app/main/default/objects/Worksheet__c/fields/Lunch_Total_CONUS_2__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Total_CONUS_2__c</fullName>
    <formula>Amount5__c * Lunch_Rate2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lunch Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>