force-app/main/default/objects/Worksheet__c/fields/LunchTotalC__c.field-meta.xml
<CustomField>
    <fullName>LunchTotalC__c</fullName>
    <description>PacPoint-AC121219 - Created for DCCA Travel Approval phase 1</description>
    <formula>LunchC__c * Amount2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lunch Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>