force-app/main/default/objects/Worksheet__c/fields/LunchTotalDFormula__c.field-meta.xml
<CustomField>
    <fullName>LunchTotalDFormula__c</fullName>
    <formula>&quot;(&quot; + TEXT(ABS( LunchTotalD__c)) + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lunch Total D Formula</label>
    <type>Text</type>
</CustomField>