force-app/main/default/objects/Worksheet__c/fields/Meal_Rate_rounded_to_the_nearest_dollar2__c.field-meta.xml
<CustomField>
    <fullName>Meal_Rate_rounded_to_the_nearest_dollar2__c</fullName>
    <formula>ROUND(Local_Meals_Rate__c * 0.30, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>30%
Rounded to the nearest dollar</inlineHelpText>
    <label>Meal Rate Lunch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>