force-app/main/default/objects/Worksheet__c/fields/NameofHotel2__c.field-meta.xml
<CustomField>
    <fullName>NameofHotel2__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Name of Hotel</label>
    <length>60</length>
    <type>Text</type>
</CustomField>