force-app/main/default/objects/Worksheet__c/fields/Number_of_Nights__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Nights__c</fullName>
    <formula>CheckOutDate__c -  CheckInDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Nights</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>