force-app/main/default/objects/Worksheet__c/fields/NumberofDays2__c.field-meta.xml
<CustomField>
    <fullName>NumberofDays2__c</fullName>
    <description>PacPoint-AC120919 - Created for DCCA Travel Approval phase 1</description>
    <label>Number of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>