force-app/main/default/objects/Worksheet__c/fields/NumberofNights__c.field-meta.xml
<CustomField>
    <fullName>NumberofNights__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Number of Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>