force-app/main/default/objects/Worksheet__c/fields/OCONUS_Foreign_or_Alaska_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>OCONUS_Foreign_or_Alaska_Checkbox__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(TravelType__c, &quot;Hawaii, Alaska, &amp; Foreign Countries (OCONUS)&quot;),
        ISPICKVAL(Travel_Approval__r.TravelType__c, &quot;OCONUS (Foreign or Alaska)&quot;)
    ),
    &quot;X&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OCONUS (Foreign or Alaska) Checkbox</label>
    <type>Text</type>
</CustomField>