force-app/main/default/objects/Worksheet__c/fields/OtherCost__c.field-meta.xml
<CustomField>
    <fullName>OtherCost__c</fullName>
    <description>PacPoint-AC120919 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>Subway, Bus, Rail, Metro</inlineHelpText>
    <label>Other Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>