force-app/main/default/objects/Worksheet__c/fields/Out_of_State_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Out_of_State_Checkbox__c</fullName>
    <formula>IF(
OR(
    ISPICKVAL(Travel_Approval__r.TravelType__c, &quot;OCONUS (Foreign or Alaska)&quot;),
    ISPICKVAL(Travel_Approval__r.TravelType__c, &quot;CONUS (Contiguous 48 States)&quot;)
),
    &quot;X&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NEWOut of State Checkbox</label>
    <type>Text</type>
</CustomField>