force-app/main/default/objects/Worksheet__c/fields/Out_of_State_DocGen__c.field-meta.xml
<CustomField>
    <fullName>Out_of_State_DocGen__c</fullName>
    <description>PacPoint: 00011690 - Created for Spring CM doc generation because client needs an &quot;x&quot; as a value instead of True/False.</description>
    <formula>IF( 
OutOfStateCheckbox__c = TRUE, &quot;x&quot;, NULL

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out-of-State DocGen</label>
    <type>Text</type>
</CustomField>