force-app/main/default/objects/Worksheet__c/fields/OutOfStateCheckbox__c.field-meta.xml
<CustomField>
    <fullName>OutOfStateCheckbox__c</fullName>
    <description>PacPoint: JF - Case #8012 - DCCA Travel Application - Create Worksheet C Docusign Template</description>
    <formula>ISPICKVAL(TravelType__c, &quot;Out-of-State&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out-of-State Checkbox</label>
    <type>Checkbox</type>
</CustomField>