force-app/main/default/objects/Worksheet__c/fields/OutofStateTravelTypeWorksheetC__c.field-meta.xml
<CustomField>
    <fullName>OutofStateTravelTypeWorksheetC__c</fullName>
    <description>PacPoint-AC021221 - Created for Travel Approval - Creating this field for worksheet C to display on the &quot;Out of State&quot; field</description>
    <formula>IF(ISPICKVAL(TravelType__c, &quot;Out-of-State&quot;),&quot;x&quot;,&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out of State Travel Type Worksheet C</label>
    <type>Text</type>
</CustomField>