force-app/main/default/objects/Worksheet__c/fields/PickUpDate__c.field-meta.xml
<CustomField>
    <fullName>PickUpDate__c</fullName>
    <description>PacPoint-AC120919 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>MM/DD/YY</inlineHelpText>
    <label>Pick Up Date</label>
    <type>Date</type>
</CustomField>