force-app/main/default/objects/Worksheet__c/fields/PickUpLocation__c.field-meta.xml
<CustomField>
    <fullName>PickUpLocation__c</fullName>
    <description>PacPoint-AC120919 - Created for DCCA Travel Approval phase 1</description>
    <label>Pick Up Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>