force-app/main/default/objects/Worksheet__c/fields/PreparedBy__c.field-meta.xml
<CustomField>
    <fullName>PreparedBy__c</fullName>
    <description>PacPoint-AC121319 - Created for DCCA Travel Approval phase 1</description>
    <formula>Travel_Approval__r.ContactPerson__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prepared By</label>
    <type>Text</type>
</CustomField>