force-app/main/default/objects/Worksheet__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <description>PacPoint: Case - 00011701
Created for document generation</description>
    <label>Purchase Order #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>