force-app/main/default/objects/Worksheet__c/fields/QuotationDate2__c.field-meta.xml
<CustomField>
    <fullName>QuotationDate2__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>MM/DD/YYYY</inlineHelpText>
    <label>Quotation Date</label>
    <type>Date</type>
</CustomField>